--- a/Interact with Jupyter.ipynb
+++ b/Interact with Jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a1897bf",
+   "id": "ced64e90",
    "metadata": {},
    "source": [
     "An interesting way of interacting with Jupyter"
@@ -10,10 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "79a6f61d",
+   "execution_count": 1,
+   "id": "0e977b84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe8db2b2946c4317aa1f47e6ba0023ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34d11c16eb204249935b284951f37e82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='OK', style=ButtonStyle(), tooltip='this is a button')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
